--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </style>
 </head>
 <body>
-  <h1>техно гид</h1>
+  <h1>техно гид.</h1>
 
   <div class="tabs vertical-tabs">
     <button class="tab-button active" data-tab="notebooks">Ноутбуки</button>
