--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Техно Гид</title>
+  <title>Техно Гид.</title>
   <style>
     body {
       margin: 0;
