--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <p>
       Вас приветствует сайт Техно Гид — ваш помощник в выборе техники и электроники!
       на нашем сайте выможете найти нужные компоненты для сваего пк - ноутбука у нас даже можно узнать где модно купить
-      эти компоненты и даже ноутбуки наш сайт часто бновляеться поэтому можете не волноваться за пригодность информации 
+      эти компоненты и даже ноутбуки наш сайт часто бновляеться поэтому можете не волноваться за пригодность информации фаха чорт
     </p>
   </div>
 
@@ -309,4 +309,5 @@
 
 </body>
 </html>
+
 
